syntax = "proto3";

package downloader_v1;

option go_package = "thumbnail-downloader/pkg/downloader_v1;downloader_v1";

service Downloader {
    rpc Download(DownloadRequest) returns (DownloadResponse) {}
}

message DownloadRequest {
    string url = 1;
}

message DownloadResponse {
    bytes image_data = 1;
}